--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-opencv-python
-face_recognition
-numpy
+opencv-python==4.11.0.86
+face_recognition==1.3.0
+numpy==2.2.5
+pillow==11.2.1
+dlib==19.24.8
+face-recognition-models==0.3.0
+click==8.1.8
