--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-opencv-python==4.11.0.86
-face_recognition==1.3.0
-numpy==2.2.5
-pillow==11.2.1
-dlib==19.24.8
-face-recognition-models==0.3.0
-click==8.1.8
+numpy>=1.19.0 # For numerical operations
+opencv-python>=4.5.0 # For image processing adn video capture
+face-recognition>=1.3.0 # For face recognition
+gtts>=2.2.0 # For text-to-speech conversion
+pygame>=2.0.0 # For audio playback from gtts
