--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ gtts>=2.2.0 # For text-to-speech conversion
 pygame>=2.0.0 # For audio playback from gtts
 vosk>=0.3.42 # For speech recognition
 sounddevice>=0.4.5 # For audio listening
+llama-cpp-python>=0.2.0
