--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ vosk>=0.3.42 # For speech recognition
 sounddevice>=0.4.5 # For audio listening
 llama-cpp-python>=0.2.0 # For LLaMA model interaction
 tqdm>=4.62.0 # For progress bars
-requests>=2.26.0 # For HTTP requests FOR MODEL DOWNLOAD
+requests>=2.26.0 # For HTTP requests FOR OPENAI
 dotenv>=0.9.9 # For environment variable management
