--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ sounddevice>=0.4.5 # For audio listening
 llama-cpp-python>=0.2.0 # For LLaMA model interaction
 tqdm>=4.62.0 # For progress bars
 requests>=2.26.0 # For HTTP requests FOR OPENAI
-dotenv>=0.9.9 # For environment variable management
+pillow>=9.0.0 # For image processing
+python-dotenv>=0.21.0 # For environment variable management
